Now use SBT 0.11.0+